# weight_tracker

./: .gitignore  README.md  gitkey.json  manage.py  pyproject.toml  serversetup.drawio
.github/workflows/: deploy.yml
app/: .env  settings.py  urls.py
app/app/: .env  settings.py
conf/: gunicorn_config.py  nginx_config.conf  startup_script.sh  weight_tracker
shutdown/: apps.py  urls.py  views.py
shutdown/templates/: shutdown.html
user/: forms.py  tests.py  urls.py  views.py
user/templates/: base.html  login.html  register.html  template_activate_account.html
weight/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
weight/migrations/: 0001_initial.py  0002_mass_delete_userprofile.py
weight/templates/: mass_graph.html  mass_input.html
weight_tracker/: asgi.py  settings.py  urls.py  wsgi.py
workoutplan/: apps.py  urls.py  views.py
workoutplan/templates/: base.html  workoutplan.html
